# easycob

./: README.md
backend/: .env.example  .eslintrc.json  .gitignore  Casa da Mãe.session.sql  adonisrc.ts  ecosystem.config.cjs  ecosystem.config.js  manage_queues.sh  package-lock.json  package.json  tsconfig.json
backend/commands/: bulk_action_eme.ts  bulk_action_sms.ts  email_sanitation.ts  fix_send_lost_action_eme.ts  fix_send_lost_action_sms.ts  fix_send_lost_action_sms_eme.ts  move_old_campaigns.ts  resend_action.ts  send_lot.ts  send_resend_recupera.ts  test.ts  update_last_action.ts
backend/config/: bodyparser.ts  database.ts  jobs.ts  mail.ts  queue.ts  redis.ts  socket.ts
backend/providers/: socket_io_provider.ts
backend/start/: env.ts  events.ts  routes.ts
bull-board/: app.js  ecosystem.config.cjs  package-lock.json  package.json
bull-board/routes/: index.js
frontend/: .env-example  .eslintrc  Dockerfile  app.vue  components.json  docker-compose.yml  ecosystem.config.cjs  next-auth.d.ts  next.config.mjs  nuxt.config.ts  package-lock.json  package.json  server.js  server.ts  tsconfig.json
frontend-next/: .env  .gitignore  ecosystem.config.cjs  middleware.ts  next.config.mjs  package-lock.json  package.json
frontend-next/app/: layout.tsx  page.tsx
frontend/app/: layout.tsx
frontend/composables/: useAction.ts  useAuthentication.ts  useAuthorization.ts  useCampaign.ts  useCampaignTemplate.ts  (+13 more)
montanha/: index.html  main.js  style.css
xlsx_to_json/: Cargo.toml  build.rs  col_date.json
xlsx_to_json/src/: column_mapping.json  main.rs
(+595 files in other folders)
